protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_oneof-8.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Err(
    [
        UnexpectedToken {
            expected: "'{'",
            found: "<",
            span: 10..11,
        },
    ],
)
